test/scripts/products/h24-verify-selfmanaged-apicast-and-custom-policy/apicast-operator-subscription.yaml
apiVersion: operators.coreos.com/v1alpha1
kind: Subscription
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"operators.coreos.com/v1alpha1","kind":"Subscription","metadata":{"annotations":{},"generation":1,"labels":{"operators.coreos.com/apicast-operator.selfmanaged-apicast":""},"name":"apicast-operator","namespace":"selfmanaged-apicast"},"spec":{"channel":"threescale-2.10","installPlanApproval":"Automatic","name":"apicast-operator","source":"redhat-operators","sourceNamespace":"openshift-marketplace","startingCSV":"apicast-operator.v0.4.0"}}
  generation: 1
  labels:
    operators.coreos.com/apicast-operator.selfmanaged-apicast: ""
  name: apicast-operator
  namespace: selfmanaged-apicast
spec:
  channel: threescale-2.10
  installPlanApproval: Automatic
  name: apicast-operator
  source: redhat-operators
  sourceNamespace: openshift-marketplace
  startingCSV: apicast-operator.v0.4.0
