test/scripts/products/h24-verify-selfmanaged-apicast-and-custom-policy/selfmanaged-apicast-operator-group.yaml
apiVersion: operators.coreos.com/v1
kind: OperatorGroup
metadata:
  annotations:
    olm.providedAPIs: APIcast.v1alpha1.apps.3scale.net
  generateName: selfmanaged-apicast-
  generation: 1
  name: selfmanaged-apicast-wrm8v
  namespace: selfmanaged-apicast
spec:
  targetNamespaces:
  - selfmanaged-apicast
